# block-breaker-rust

./: Cargo.toml  README.md
assets/: .vertical_boundary.png-autosave.kra  brick.png~  horizontal_boundary.png~  paddle.png~
src/: main.rs
src/component/: ball_hit_event.rs  mod.rs  prelude.rs  window.rs
src/plugin/: audio_plugin.rs  camera_plugin.rs  mod.rs  physics_plugin.rs  prelude.rs  ui_plugin.rs
