[package]
name = "geomtery"
version = "0.1.0"
authors = ["KDahir247 <k.dahir243@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
bevy = "0.5.0"
bevy_rapier2d = "0.9.0"
rapier2d = "0.7.2"
rapier3d = "0.7.2"